force-app/main/default/objects/ARF_Channel_Performance__c/ARF_Channel_Performance__c.object-meta.xml
<CustomObject>
    <label>Channel Performance</label>
    <nameField><label>Performance ID</label><displayFormat>CP-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Channel Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>