force-app/main/default/objects/ARF_Channel_Performance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Performance</relationshipLabel>
    <relationshipName>Channel_Performance</relationshipName>
</CustomField>