force-app/main/default/objects/ARF_Channel_Performance__c/fields/Avg_Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Avg_Response_Time_Hours__c</fullName>
    <label>Avg Response Time (Hours)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>