force-app/main/default/objects/ARF_Channel_Performance__c/fields/Best_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Best_Day_Of_Week__c</fullName>
    <label>Best Day of Week</label>
    <type>Text</type>
    <length>20</length>
</CustomField>