force-app/main/default/objects/ARF_Channel_Performance__c/fields/Best_Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_Of_Day__c</fullName>
    <label>Best Time of Day</label>
    <type>Text</type>
    <length>20</length>
</CustomField>