force-app/main/default/objects/ARF_Channel_Performance__c/fields/Last_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Date__c</fullName>
    <label>Last Response Date</label>
    <type>DateTime</type>
</CustomField>