force-app/main/default/objects/ARF_Channel_Performance__c/fields/Payments_Generated__c.field-meta.xml
<CustomField>
    <fullName>Payments_Generated__c</fullName>
    <label>Payments Generated</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>