force-app/main/default/objects/ARF_Channel_Performance__c/fields/Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_Rate__c</fullName>
    <label>Response Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>