force-app/main/default/objects/ARF_Channel_Performance__c/fields/Responses__c.field-meta.xml
<CustomField>
    <fullName>Responses__c</fullName>
    <label>Responses</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>